<resources>
    <string name="app_name">EzQuize</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="home">Home</string>
    <string name="math">Mathematics</string>
    <string name="add_button">Add Subject</string>
    <string name="search_hint">Search</string>
    <string name="lesson_number">Lesson No. 1</string>
    <string name="lesson_name">The anatomy of insects</string>
    <string name="play_btn">Play</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="identification">Identification</string>
    <string name="trueorfalse">True/False</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="hint_question">Question</string>
    <string name="save">Save</string>
    <string name="true_choice">True</string>
    <string name="false_choice">False</string>
    <string name="optionA">Option A</string>
    <string name="optionB">Option B</string>
    <string name="optionC">Option C</string>
    <string name="key_to_correction">Key To Corection</string>
    <string name="timer">Timer</string>
    <string name="score">20</string>
    <string name="question_no">Question No. 25</string>
    <string name="check">CHECK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleTrueorfalse">True or False</string>
    <string name="lesson_number_hint">Lesson No.</string>
    <string name="lesson_name_hint">Lesson Name</string>
    <string name="add_lesson_title">Lesson Form</string>
    <string name="update_lesson">Update</string>
    <string name="result">Quiz Result</string>
    <string name="back">Main Menu</string>
    <string name="summary">Summary</string>
</resources>