<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_3"
            android:layout_marginBottom="@dimen/margin_2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/candal"
                android:text="@string/add_lesson_title"
                android:textColor="@color/dark_bg"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/update_lesson_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_brown"
                android:ems="10"
                android:hint="@string/lesson_name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/dark_bg"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/update_lesson_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_brown"
                android:ems="10"
                android:hint="@string/lesson_number_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="@color/dark_bg"
                android:textSize="18sp" />

            <Button
                android:id="@+id/update_lesson_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_bg"
                android:text="@string/update_lesson" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>