<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/RadioButtonColorTrue"
    tools:context=".MultipleChoiceFragmentResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <RadioGroup
            android:id="@+id/group_choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/option_a_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                android:layout_marginBottom="@dimen/margin_1"
                android:background="@drawable/choices_background"
                android:text="@string/optionA"
                android:textColor="@color/border" />

            <RadioButton
                android:id="@+id/option_b_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                android:layout_marginBottom="@dimen/margin_1"
                android:background="@drawable/choices_background"
                android:text="@string/optionB"
                android:textColor="@color/border" />

            <RadioButton
                android:id="@+id/option_c_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                android:layout_marginBottom="@dimen/margin_1"
                android:background="@drawable/choices_background"
                android:text="@string/optionC"
                android:textColor="@color/border" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>