<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionnairePage">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/question_card_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:fab_expandDirection="up"
        app:fab_labelsPosition="left"
        app:fab_addButtonSize="normal"
        app:fab_labelStyle="@style/FloatingLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/multiple_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_colorNormal="@color/yellow_bg"
            app:fab_icon="@drawable/multiple"
            app:fab_title="@string/multiple_choice" />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_colorNormal="@color/yellow_bg"
            app:fab_icon="@drawable/identification"
            app:fab_title="@string/identification" />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/trueorfalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_colorNormal="@color/yellow_bg"
            app:fab_icon="@drawable/choices"
            app:fab_title="@string/trueorfalse" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</androidx.constraintlayout.widget.ConstraintLayout>