<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_2"
    android:layout_marginTop="@dimen/border_radius_1"
    android:layout_marginEnd="@dimen/margin_2"
    android:layout_marginBottom="@dimen/border_radius_1">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:strokeColor="@color/border"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_1"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lesson_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:fontFamily="@font/baloo_thambi"
                    android:padding="2dp"
                    android:text="@string/lesson_number"
                    android:textColor="@color/dark_bg"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lesson_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:fontFamily="@font/amiko_semibold"
                    android:padding="@dimen/margin_1"
                    android:text="@string/lesson_name" />
            </LinearLayout>

            <ImageView
                android:id="@+id/play_btn"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_2"
                android:layout_weight="0"
                android:contentDescription="@string/play_btn"
                app:srcCompat="@drawable/play_btn" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>