<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MultipleChoiceCreationPage">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/amiko_semibold"
                android:text="@string/multiple_choice"
                android:textColor="@color/dark_bg"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/AppTheme.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="4dp"
                android:theme="@style/editTextPrimaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/multiple_choice_question"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/question" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="@dimen/margin_2"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/option_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:backgroundTint="@color/dark_bg"
                        android:ems="10"
                        android:hint="@string/optionA"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        tools:ignore="TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/option_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:backgroundTint="@color/dark_bg"
                        android:ems="10"
                        android:hint="@string/optionB"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:theme="@style/editTextPrimaryColor"
                        tools:ignore="TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/option_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:backgroundTint="@color/dark_bg"
                        android:ems="10"
                        android:hint="@string/optionC"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:theme="@style/editTextPrimaryColor" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2"
                android:layout_marginBottom="@dimen/margin_2"
                android:layout_weight="2"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/key_to_correction" />

                    <RadioGroup
                        android:id="@+id/multiple_choices_buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_1"
                        android:layout_marginBottom="@dimen/margin_2"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/optionA_rdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="1"
                            android:button="@drawable/radio_button_padding"
                            android:text="@string/optionA"
                            android:theme="@style/RadioButtonSelected" />

                        <RadioButton
                            android:id="@+id/optionB_rdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:button="@drawable/radio_button_padding"
                            android:text="@string/optionB"
                            android:theme="@style/RadioButtonSelected" />

                        <RadioButton
                            android:id="@+id/optionC_rdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:button="@drawable/radio_button_padding"
                            android:text="@string/optionC"
                            android:theme="@style/RadioButtonSelected" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/multiple_choices_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/dark_bg"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>