<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrueOrFalseCreationPage" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/amiko_semibold"
                android:text="@string/titleTrueorfalse"
                android:textColor="@color/dark_bg"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="20dp"
                android:theme="@style/editTextPrimaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_bipolar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="@string/hint_question" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/bipolar_choices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.096">


                <RadioButton
                    android:id="@+id/true_rd_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginTop="@dimen/margin_1"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:layout_marginBottom="@dimen/margin_2"
                    android:layout_weight="1"
                    android:background="@drawable/background_true_radio"
                    android:button="@drawable/radio_button_padding"
                    android:fontFamily="@font/open_sans"
                    android:includeFontPadding="true"
                    android:padding="@dimen/margin_3"
                    android:text="@string/true_choice"
                    android:textSize="18sp"
                    android:theme="@style/RadioButtonColorTrue" />

                <RadioButton
                    android:id="@+id/false_rd_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginTop="@dimen/margin_2"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:layout_weight="1"
                    android:background="@drawable/background_false_radio"
                    android:button="@drawable/radio_button_padding"
                    android:fontFamily="@font/open_sans"
                    android:padding="@dimen/margin_3"
                    android:text="@string/false_choice"
                    android:textSize="18sp"
                    android:theme="@style/RadioButtonColorFalse" />

            </RadioGroup>

            <Button
                android:id="@+id/bipolar_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/dark_bg"
                android:fontFamily="@font/basic"
                android:text="@string/save"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bipolar_choices"
                app:layout_constraintVertical_bias="0.877" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>